# logrotate2files

./: .cproject  .project  Makefile.am  configure.ac
src/: logrotate2files.c  logrotate2files.h
