AUTOMAKE_OPTIONS = foreign

CFLAGS = -Wall -pedantic
include_HEADERS = src/logrotate2files.h

#lib_LTLIBRARIES = libbbexample.la
#libbbexample_la_SOURCES  = bbexamplelib.c
#libbbexample_la_LDFLAGS= -version-info 1:0:0

bin_PROGRAMS = logrotate2files
logrotate2files_SOURCES = src/logrotate2files.c
#bbexample_LDADD = .libs/libbbexample.la
